--- a/concert-demos-rest-service/src/main/resources/application.properties
+++ b/concert-demos-rest-service/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=Concert Demos REST Service
-r2dbc.url=r2dbc:h2:mem://./testdb
+spring.r2dbc.url=r2dbc:postgresql://localhost/data
+spring.r2dbc.username=dbuser
+spring.r2dbc.password=dbpass
