--- a/concert-demos-rest-service/src/main/resources/application.properties
+++ b/concert-demos-rest-service/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=Concert Demos REST Service
-spring.r2dbc.url=r2dbc:postgresql://localhost/data
-spring.r2dbc.username=dbuser
-spring.r2dbc.password=dbpass
+spring.r2dbc.url=r2dbc:postgresql://localhost/concertsdb
+spring.r2dbc.username=postgres
+spring.r2dbc.password=admin
+spring.r2dbc.initialization-mode=always
