--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
     <packaging>pom</packaging>
 
     <properties>
+        <maven-surefire-plugin.version>3.0.0-M4</maven-surefire-plugin.version>
+        <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
         <java.version>12</java.version>
         <kotlin.version>1.3.61</kotlin.version>
     </properties>
