--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,15 @@
     <properties>
         <maven-surefire-plugin.version>3.0.0-M4</maven-surefire-plugin.version>
         <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
-        <java.version>12</java.version>
+        <maven-compiler-plugin.source>12</maven-compiler-plugin.source>
+        <maven-compiler-plugin.target>12</maven-compiler-plugin.target>
         <kotlin.version>1.3.61</kotlin.version>
+        <groovy.version>2.5.8</groovy.version>
+        <lombok-maven-plugin.version>1.18.10.0</lombok-maven-plugin.version>
+        <spock-spring.version>2.0-M1-groovy-2.5</spock-spring.version>
+        <kotlin-logging.version>1.7.8</kotlin-logging.version>
+        <lombok.version>1.18.10</lombok.version>
+        <netty-all.version>4.1.44.Final</netty-all.version>
     </properties>
 
     <modules>
