--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
 
     <modules>
         <module>concert-demos-rest-service</module>
+        <module>concerts-demos-data</module>
     </modules>
 
     <dependencyManagement>
@@ -57,6 +58,11 @@
                 <artifactId>assertj-core</artifactId>
                 <version>${assertj-core.version}</version>
                 <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.jesperancinha.concerts</groupId>
+                <artifactId>concerts-demos-data</artifactId>
+                <version>${project.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
