--- a/concert-demos-rest-service-mvc/src/main/resources/application.properties
+++ b/concert-demos-rest-service-mvc/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=Concert Demos REST Service
-spring.r2dbc.url=r2dbc:postgresql://localhost/concertsdb
-spring.r2dbc.username=postgres
-spring.r2dbc.password=admin
-spring.r2dbc.initialization-mode=always
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
