--- a/concert-demos-rest-service-mvc/src/main/resources/application-dev.properties
+++ b/concert-demos-rest-service-mvc/src/main/resources/application-dev.properties
@@ -1,1 +1,1 @@
-spring.r2dbc.url=r2dbc:postgresql://${postgres.host}/concertsdb
+spring.datasource.url=r2dbc:postgresql://${postgres.host}/concertsdb
