--- a/concert-demos-rest-service-mvc/pom.xml
+++ b/concert-demos-rest-service-mvc/pom.xml
@@ -81,6 +81,11 @@
             <groupId>org.jesperancinha.concerts</groupId>
             <artifactId>concerts-demos-data</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${postgresql.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.spockframework</groupId>
