--- a/concert-demos-rest-service-mvc/src/main/resources/application-dev.properties
+++ b/concert-demos-rest-service-mvc/src/main/resources/application-dev.properties
@@ -1,1 +1,2 @@
 spring.datasource.url=jdbc:postgresql://${postgres.host}/concertsdb
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
