--- a/concert-demos-rest-service-mvc/src/main/resources/application.properties
+++ b/concert-demos-rest-service-mvc/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
