--- a/concert-demos-rest-service-mvc/src/main/resources/application.properties
+++ b/concert-demos-rest-service-mvc/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8080
 spring.application.name=Concert Demos REST Service
 spring.datasource.username=postgres
 spring.datasource.password=admin
