--- a/concert-demos-rest-service-webflux/src/main/resources/application.properties
+++ b/concert-demos-rest-service-webflux/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8081
 spring.application.name=Concert Demos REST Service
 spring.r2dbc.url=r2dbc:postgresql://localhost/concertsdb
 spring.r2dbc.username=postgres
