--- a/concert-demos-rest-service-webflux/src/main/resources/application-test.properties
+++ b/concert-demos-rest-service-webflux/src/main/resources/application-test.properties
@@ -1,1 +1,2 @@
 spring.r2dbc.url=r2dbc:h2:mem:///concertsdb?options=DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+org.jesperancinha.concerts.schema.file=schema.sql
