JMeter environment / Detected error solutions

--- a/concert-demos-rest-service-mvc/src/main/resources/application-prod.properties
+++ b/concert-demos-rest-service-mvc/src/main/resources/application-prod.properties
@@ -1,2 +1,2 @@
-spring.datasource.url=jdbc:postgresql://postgres/concertsdb
+spring.datasource.url=jdbc:postgresql://postgres/${postgres.database}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
