--- a/concert-demos-rest-service-mvc/src/main/resources/application.properties
+++ b/concert-demos-rest-service-mvc/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.password=admin
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+postgres.database=concertsdb-mvc
