--- a/concert-demos-rest-service-webflux/src/main/resources/application-dev.properties
+++ b/concert-demos-rest-service-webflux/src/main/resources/application-dev.properties
@@ -1,2 +1,1 @@
-spring.r2dbc.url=r2dbc:postgresql://${postgres.host}/concertsdb
-org.jesperancinha.concerts.schema.file=schema-postgres.sql
+spring.r2dbc.url=r2dbc:postgresql://${postgres.host}/${postgres.database}
