--- a/concert-demos-rest-service-webflux/src/main/resources/application.properties
+++ b/concert-demos-rest-service-webflux/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.r2dbc.url=r2dbc:postgresql://localhost/concertsdb
 spring.r2dbc.username=postgres
 spring.r2dbc.password=admin
 spring.r2dbc.initialization-mode=always
+
+postgres.database=concertsdb-webflux
