--- a/concert-demos-rest-service-mvc/src/main/resources/application-test.properties
+++ b/concert-demos-rest-service-mvc/src/main/resources/application-test.properties
@@ -1,1 +1,1 @@
-spring.datasource.url=jdbc:h2:mem:///concertsdb?options=DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:mem:///${postgres.database}?options=DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
