--- a/docker-psql/Dockerfile
+++ b/docker-psql/Dockerfile
@@ -2,4 +2,6 @@ FROM postgres:12
 
 COPY init-dbs.sh /docker-entrypoint-initdb.d/
 
+COPY postgresql.conf /etc/postgresql/postgresql.conf
+
 EXPOSE 5432
