--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,19 @@
-version: "2"
+version: "3.7"
 services:
+  postgres:
+    hostname: postgres
+    build:
+      context: ./docker-psql/.
+    env_file:
+      - ./docker-psql/.env
+    volumes:
+      - ./docker-psql/init-scripts:/docker-entrypoint-initdb.d
+    environment:
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
+      - POSTGRES_MULTIPLE_DATABASES=concertsdbmvc,concertsdbwebflux
+    ports:
+      - "5432:5432"
   concerts:
     hostname: concerts
     build:
@@ -8,9 +22,3 @@ services:
       - "8085:80"
       - "8081:8081"
       - "8082:8082"
-  postgres:
-    hostname: postgres
-    build:
-      context: docker-psql/.
-    env_file:
-      - docker-psql/.env
