⭕️ Travis coverage reports

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,18 @@
-os: osx
-language: java
-jdk:
-  - openjdk13
+cache:
+  directories:
+  - .autoconf
+  - $HOME/.m2
+jobs:
+  include:
+    - language: java
+      stage: Concert Demos
+      jdk:
+        - openjdk13
+      cache:
+        directories:
+        - .autoconf
+        - $HOME/.m2
+      script:
+        - mvn clean install package coveralls:report -DrepoToken=${COVERALLS_TOKEN}
+        - bash <(curl -s https://codecov.io/bash)
+        - bash <(curl -Ls https://coverage.codacy.com/get.sh) report -l Java $(find **/jacoco.xml -printf -r %p)
