⭕️ Travis coverage reports

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,4 @@ jobs:
       script:
         - mvn clean install package coveralls:report -DrepoToken=${COVERALLS_TOKEN}
         - bash <(curl -s https://codecov.io/bash)
-        - bash <(curl -Ls https://coverage.codacy.com/get.sh) report -l Java $(find **/jacoco.xml -printf -r %p)
+        - bash <(curl -Ls https://coverage.codacy.com/get.sh) report -l Java Kotlin $(find **/jacoco.xml -printf -r %p)
