--- a/concerts-demos-data/pom.xml
+++ b/concerts-demos-data/pom.xml
@@ -27,6 +27,7 @@
     </dependencies>
 
     <build>
+        <sourceDirectory>src/main/kotlin</sourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
