ℹ️ Extra lines solution for Kotlin

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,15 @@ jobs:
         - .autoconf
         - $HOME/.m2
       script:
-        - mvn clean install package coveralls:report -DrepoToken=${COVERALLS_TOKEN}
+        - mvn clean install package
+        - cd concert-demos-rest-service-mvc
+        - mvn coveralls:report -DrepoToken=${COVERALLS_TOKEN}
+        - cd ..
+        - cd concert-demos-rest-service-webflux
+        - mvn coveralls:report -DrepoToken=${COVERALLS_TOKEN}
+        - cd ..
+        - cd concerts-demos-data
+        - mvn coveralls:report -DrepoToken=${COVERALLS_TOKEN}
+        - cd ..
         - bash <(curl -s https://codecov.io/bash)
         - bash <(curl -Ls https://coverage.codacy.com/get.sh) report -l Java Kotlin $(find **/jacoco.xml -printf -r %p)
