--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ jobs:
         - $HOME/.m2
       script:
         - mvn clean install package
+        - bash <(curl -s https://codecov.io/bash)
+        - bash <(curl -Ls https://coverage.codacy.com/get.sh) report -l Java Kotlin $(find **/jacoco.xml -printf -r %p)
+      after_success:
         - cd concert-demos-rest-service-mvc
         - mvn coveralls:report -DrepoToken=${COVERALLS_TOKEN}
         - cd ..
@@ -23,5 +26,3 @@ jobs:
         - cd concerts-demos-data
         - mvn coveralls:report -DrepoToken=${COVERALLS_TOKEN}
         - cd ..
-        - bash <(curl -s https://codecov.io/bash)
-        - bash <(curl -Ls https://coverage.codacy.com/get.sh) report -l Java Kotlin $(find **/jacoco.xml -printf -r %p)
